# syz-mock

./: Makefile  go.mod  go.sum
pkg/rpctype/: rpctype.go
prog/: mutation.go  rand.go  sched.go
syz-fuzzer/: fuzzer.go  proc.go
syz-manager/: manager.go  mock.go  mock_test.go  rpc.go
syz-manager/lib/: mock.h
tools/mock/: Cargo.toml
tools/mock/src/: lib.rs
tools/model_manager/api/: views.py
tools/model_manager/api/lang_model/: dataset.py  model.py  train.py  utils.py
tools/model_manager/api/lang_model/data/: targetSyscalls
